# Lite-Dispatch

./: .gitignore  Dockerfile  README.md  conftest.py  database.py  docker-compose.yml  logging_config.py  main.py  models.py  plugin_manager.py  pyproject.toml  schemas.py  security.py  service.py  system_design.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 82c50dec4193_initial_tables.py  b3c987b3b0b2_add_user_table.py
plugins/: base.py  console.py
tests/: test_incidents.py
